--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,12 @@
 {
     box-sizing: border-box;
 }
+h1 {
+    text-align: center;
+    background-color: rgb(45, 87, 155);
+    color: #fff;
+    font-size: 5vw;
+}
 form {
     display: flex;
 }
